# Agromant

./: LICENSE.md  README.md  docker-compose.yml
.github/workflows/: deploy.yaml  qa.yaml
bot/: .dockerignore  .gitignore  Dockerfile  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  start.sh
bot/api/: payments.py
bot/daos/: payment_dao.py  scan_dao.py  user_dao.py
bot/decorators/: message_handler.py
bot/handlers/commands/: help.py  start.py  support.py
bot/handlers/messages/: default.py
bot/models/: payment.py  pydantic_object_id.py  scan.py  user.py  yookassa_common.py  yookassa_notification.py  yookassa_payment_status.py  yookassa_receipt_status.py
bot/resources/: payment.json.txt
bot/resources/plant_analysis/: prompt.txt
bot/services/: __init__.py  payment_service.py  scan_service.py  user_service.py
bot/tests/: conftest.py
bot/tests/imports/: test_imports.py
bot/tg/decorators/: callback_handler.py  command_handler.py  message_handler.py
bot/tg/handlers/callbacks/: subscription.py
bot/tg/handlers/commands/: help.py  profile.py  start.py  subscription.py  support.py
bot/tg/handlers/messages/: default.py
bot/tg/utils/: config.py  constants.py  plant_analyzer.py  telegram_media_downloader.py  yookassa.py
bot/utils/: constants.py  plant_analyzer.py  telegram_media_downloader.py
